AB 3.60 02/00
---------------------------------------------------------------------------------------------------

Neue Endpunkte
- DELETE /v1/customers
- DELETE /v1/suppliers
- POST /v1/customers
- POST /v1/suppliers
- PUT /v1/customers
- PUT /v1/suppliers

Änderungen an bestehenden Models
- BillOfMaterialProductItem/AssemblyDate -> Neue Property für das Produktionsdatum bzw. Datum der Zerlegung
- BillOfMaterialProductItem/IsForAssembly -> Neue Property zur Angabe, ob der Artikel produziert/zerlegt werden soll
- Customer/BankId -> Property wurde hinzugefügt
- Customer/BankKey -> Property wurde hinzugefügt
- Customer/DeliveryConditionKey -> Property wurde hinzugefügt
- Customer/IsReverseCharge -> Neue Property für Steuerschuldnerschaft des Leistungsempfängers
- Customer/ReferencedSupplierNumber -> Neue Property für Lieferantennummer
- Customer/TermsOfPaymentKey -> Property wurde hinzugefügt
- ManufactureDocument/CalculationFieldTotals -> Neue Property für Rechenfeldsummen
- ManufactureDocument/CostCenter -> Neue Property für Kostenstelle
- ManufactureDocument/CostUnit -> Neue Property für Kostenträger
- PeriodicalPurchaseDocumentTemplate/CalculationFieldTotals -> Neue Property für Rechenfeldsummen
- PeriodicalPurchaseDocumentTemplate/CostCenter -> Neue Property für Kostenstelle
- PeriodicalPurchaseDocumentTemplate/CostUnit -> Neue Property für Kostenträger
- PeriodicalSalesDocumentTemplate/CalculationFieldTotals -> Neue Property für Rechenfeldsummen
- PeriodicalSalesDocumentTemplate/CostCenter -> Neue Property für Kostenstelle
- PeriodicalSalesDocumentTemplate/CostUnit -> Neue Property für Kostenträger
- PdfCreationData/DataType -> Neue Ausprägung ManufactureDocument zur PDF-Erzeugung von Fertigungsbelegen
- ProductLineItem/AssemblyDate -> Neue Property für das Produktionsdatum bzw. Datum der Zerlegung
- ProductLineItem/CalculationFieldValues -> Neue Property für Rechenfeldwerte