@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2023 HS - Hamburger Software GmbH & Co. KG
+Copyright (c) 2024 HS - Hamburger Software GmbH & Co. KG
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
